@@ -34,8 +34,8 @@
  ******************************************************************************
  *
  * $Log$
- * Revision 1.34  2001-06-01 15:47:19  warmerda
- * ensure binary mode open in DBFOpen
+ * Revision 1.35  2001-06-22 02:10:06  warmerda
+ * fixed NULL shape support with help from Jim Matthews
  *
  * Revision 1.33  2001/05/31 19:20:13  warmerda
  * added DBFGetFieldIndex()
@@ -150,6 +150,7 @@ static char rcsid[] =
 
 #include <math.h>
 #include <stdlib.h>
+#include <ctype.h>
 #include <string.h>
 
 #ifndef FALSE
@@ -280,7 +281,7 @@ DBFOpen( const char * pszFilename, const char * pszAccess )
 
     if( strcmp(pszAccess,"r") == 0 )
         pszAccess = "rb";
-
+ 
     if( strcmp(pszAccess,"r+") == 0 )
         pszAccess = "rb+";
 
@@ -782,6 +783,10 @@ DBFReadStringAttribute( DBFHandle psDBF, int iRecord, int iField )
 
 /************************************************************************/
 /*                         DBFIsAttributeNULL()                         */
+/*                                                                      */
+/*      Return TRUE if value for field is NULL.                         */
+/*                                                                      */
+/*      Contributed by Jim Matthews.                                    */
 /************************************************************************/
 
 int SHPAPI_CALL
@@ -789,17 +794,29 @@ DBFIsAttributeNULL( DBFHandle psDBF, int iRecord, int iField )
 
 {
     const char	*pszValue;
-    int		i;
 
     pszValue = DBFReadStringAttribute( psDBF, iRecord, iField );
 
-    for( i = 0; pszValue[i] != '\0'; i++ )
+    switch(psDBF->pachFieldType[iField])
     {
-        if( pszValue[i] != ' ' )
-            return FALSE;
-    }
+      case 'N':
+      case 'F':
+        /* NULL numeric fields have value "****************" */
+        return pszValue[0] == '*';
 
-    return TRUE;
+      case 'D':
+        /* NULL date fields have value "00000000" */
+        return strncmp(pszValue,"00000000",8) == 0;
+
+      case 'L':
+        /* NULL boolean fields have value "?" */ 
+        return pszValue[0] == '?';
+
+      default:
+        /* empty string fields are considered NULL */
+        return strlen(pszValue) == 0;
+    }
+    return FALSE;
 }
 
 /************************************************************************/
@@ -928,18 +945,43 @@ static int DBFWriteAttribute(DBFHandle psDBF, int hEntity, int iField,
 
     pabyRec = (unsigned char *) psDBF->pszCurrentRecord;
 
-/* -------------------------------------------------------------------- */
-/*      Is this field being NULLed?  If so, just write spaces to the    */
-/*      whole field.                                                    */
-/* -------------------------------------------------------------------- */
     psDBF->bCurrentRecordModified = TRUE;
     psDBF->bUpdated = TRUE;
 
+/* -------------------------------------------------------------------- */
+/*      Translate NULL value to valid DBF file representation.          */
+/*                                                                      */
+/*      Contributed by Jim Matthews.                                    */
+/* -------------------------------------------------------------------- */
     if( pValue == NULL )
     {
-        memset( (char *) (pabyRec+psDBF->panFieldOffset[iField]), ' ', 
-                psDBF->panFieldSize[iField] );
+        switch(psDBF->pachFieldType[iField])
+        {
+          case 'N':
+          case 'F':
+	    /* NULL numeric fields have value "****************" */
+            memset( (char *) (pabyRec+psDBF->panFieldOffset[iField]), '*', 
+                    psDBF->panFieldSize[iField] );
+            break;
 
+          case 'D':
+	    /* NULL date fields have value "00000000" */
+            memset( (char *) (pabyRec+psDBF->panFieldOffset[iField]), '0', 
+                    psDBF->panFieldSize[iField] );
+            break;
+
+          case 'L':
+	    /* NULL boolean fields have value "?" */ 
+            memset( (char *) (pabyRec+psDBF->panFieldOffset[iField]), '?', 
+                    psDBF->panFieldSize[iField] );
+            break;
+
+          default:
+            /* empty string fields are considered NULL */
+            memset( (char *) (pabyRec+psDBF->panFieldOffset[iField]), '\0', 
+                    psDBF->panFieldSize[iField] );
+            break;
+        }
         return TRUE;
     }
 
@@ -1265,7 +1307,7 @@ DBFGetFieldIndex(DBFHandle psDBF, const char *pszFieldName)
     for( i = 0; i < DBFGetFieldCount(psDBF); i++ )
     {
         DBFGetFieldInfo( psDBF, i, name, NULL, NULL );
-        strcpy(name2,name);
+        strncpy(name2,name,11);
         str_to_upper(name2);
 
         if(!strcmp(name1,name2))
